Add JavaFX GUI for experiment configuration file generation
Implement a JavaFX-based GUI application that allows users to visually
configure and generate .cosc experiment configuration files:

- Add ConfigGeneratorApp as main entry point with tabbed interface
- Add DatacenterPanel for datacenter configuration
- Add HostPanel for host configuration
- Add UserPanel with VM and Task sub-panels for user configuration
- Add SummaryPanel for configuration review and multi-seed file generation
- Add template classes (ExperimentTemplate, UserTemplate, VMTemplate, TaskTemplate)
- Add CosmosConfigWriter for generating .cosc files with seed-based
  instruction length variation

Key features:
- Generate multiple config files with different seeds in one operation
- Task instruction lengths randomized within specified ranges per seed
- Identical infrastructure config (datacenters, hosts, VMs) across all seeds
- Preview generated configuration before saving
- Configuration validation before export